ingress-4.yaml
kind: Ingress
metadata:
  name: tls-ingress
apiVersion: networking.k8s.io/v1beta1
spec:
  tls:
    - hosts:
        - animation.com
      secretName: tls-secret               # Secret name
  rules:
    - host: animation.com
      http:
        paths:
          - path: /                        # Any path 
            backend:
              serviceName: animation-service
              servicePort: 8585
